--- a/CARBOFORCAL-Nov2022/carboforcal-nov2022.tex
+++ b/CARBOFORCAL-Nov2022/carboforcal-nov2022.tex
@@ -1,4 +1,4 @@
-% Created 2022-11-24 jeu. 17:54
+% Created 2022-11-24 jeu. 21:09
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt,table,dvipsnames,compress]{beamer}
 \usepackage[utf8]{inputenc}
@@ -149,52 +149,51 @@ urlcolor=Maroon}
 \placelogofalse
 
 \section{Introduction}
-\label{sec:orgbac7b38}
+\label{sec:org29993e1}
 
 \subsection{Contexte}
-\label{sec:orgfefc841}
+\label{sec:org6c863b8}
 
-\begin{frame}[label={sec:org7bfa81a}]{Changements climatiques dans le Pacifique}
+\begin{frame}[label={sec:org6b85bd6}]{Changements climatiques dans le Pacifique}
 \begin{itemize}
 \item Changement climatique lié aux émissions de GES dans l'atmosphère.
-\item Les communauté du Pacifique seront les premières impactées (montée des eaux).
-\item Impact sur la biodiversité (Pouteau et al.: 52-84\% des espèces d'arbres perdront > 50\% de leur habitat)
+\item Les communautés du Pacifique seront les premières impactées (montée des eaux).
+\item Impact sur la biodiversité (Pouteau et al. 2016: 52-84\% des espèces d'arbres perdront > 50\% de leur habitat)
 \end{itemize}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=\textwidth]{figs/Dutheil2021_cc.jpg}
-\caption{Prévisions de changement de précipitations en NC. Dutheil et al. 2021.}
+\caption{Prévisions de changement de précipitations en Nouvelle Calédonie. Dutheil et al. 2021.}
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:orgd5b5b80}]{Déforestation en Nouvelle-Calédonie}
+\begin{frame}[label={sec:org8de0168}]{Déforestation en Nouvelle-Calédonie}
 \begin{itemize}
-\item Déforestation et dégradation des forêts: 10--20\% des émissions de GES dans l'atmospère
-\item Couvert forestier: 7745 km\textsuperscript{2} en 2020 (\(\sim\) 46 \% du territoire).
-\item Inclus: forêt humide, sèche, mangroves, plantations, maquis arbustif (cf. définition FAO: H > 5 m, > 10\% de couvert arborée).
+\item Déforestation et dégradation des forêts: 10--20\% des émissions de GES dans l'atmospère.
+\item Couvert forestier en NC: 7745 km\textsuperscript{2} en 2020 (\(\sim\) 46 \% du territoire).
+\item Inclus: forêt humide, sèche, mangroves, plantations, maquis arbustif (cf. définition FAO: H > 5 m, > 10\% de couvert arboré, 0.5 ha).
 \item Déforestation: 31 km\textsuperscript{2}/an sur la période 2010-2020.
 \end{itemize}
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.8\textwidth]{figs/deforestation-NC.jpg}
-\caption{Déforestation 2000--2010--2020 en Nouvelle-Calédonie. \url{https://forestatrisk.cirad.fr/newcal}}
+\caption{Déforestation 2000--2010--2020 en Nouvelle-Calédonie. Vieilledent et al. 2022. \url{https://forestatrisk.cirad.fr/newcal}}
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:org0a20960}]{Stock et émissions de carbone}
+\begin{frame}[label={sec:org15399ca}]{Stock et émissions de carbone}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{itemize}
-\item Pas d'estimation précise des émissions de carbone (et CO\textsubscript{2}) associées à la déforestation.
-\item Manque d'information sur:
+\item Pas d'estimations précises des émissions de carbone (et CO\textsubscript{2}) associées à la déforestation.
+\item Manque d'informations sur:
 \begin{itemize}
 \item Les stocks de carbone forestier à l'échelle de la Nouvelle-Calédonie.
 \item La variation de ces stocks dans l'espace (structure et composition forestière variables).
 \end{itemize}
-\item Estimation ponctuelle (inventaires) des stocks de carbone en Nouvelle-Calédonie (150 t/ha \textpm{}42, Blanchard et al. 2016).
-\item Cartes globales des stocks de carbone mais n'incluant pas de données de terrain en Nouvelle-Calédonie.
+\item Estimations ponctuelles (inventaires) des stocks de carbone en Nouvelle-Calédonie (150 t/ha \textpm{}42, Blanchard et al. 2016).
 \end{itemize}
 \end{column}
 
@@ -202,18 +201,18 @@ urlcolor=Maroon}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.85\textwidth]{figs/Cstock_Mada.jpg}
-\caption{Carte des stocks de carbone forestier à Madagascar}
+\caption{Carte des stocks de carbone forestier à Madagascar (2010). Vieilledent et al. 2016.}
 \end{figure}
 \end{column}
 \end{columns}
 \end{frame}
 
 \subsection{Objectifs}
-\label{sec:orgd5c91f2}
+\label{sec:orgb85d0f6}
 
-\begin{frame}[label={sec:org4adc310}]{Objectifs}
+\begin{frame}[label={sec:org8893962}]{Objectifs}
 \begin{itemize}
-\item Elaboration de cartes de carbone forestier.
+\item Élaborer des cartes de carbone forestier.
 \item A haute résolution (\(\leq\) 100 m).
 \item Avec suivi périodique dans le temps (annuel ou pluriannuel).
 \end{itemize}
@@ -226,12 +225,12 @@ urlcolor=Maroon}
 \end{frame}
 
 \subsection{Intérêts}
-\label{sec:orgf5f5751}
+\label{sec:orge15760b}
 
-\begin{frame}[label={sec:orga299f4d}]{Intérêts des cartes de carbone forestier}
+\begin{frame}[label={sec:org8cfb916}]{Intérêts des cartes de carbone forestier}
 \begin{enumerate}
 \item \alert{SCIENCE} \\
-Rôle des forêts tropicales de Nouvelle-Calédonie dans le cycle du carbone.
+Rôle des forêts tropicales en Nouvelle-Calédonie dans le cycle du carbone.
 \item \alert{TERRITOIRE} \\
 Suivi de l'évolution du couvert forestier.
 \item \alert{ECONOMIE} \\
@@ -239,34 +238,38 @@ Participation au mécanisme REDD+ et financement de projets de conservation des 
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label={sec:orge912763}]{Intérêts pour la SCIENCE}
-Rôle des forêts tropicales de NC dans le cycle du carbone:
+\begin{frame}[label={sec:org0900691}]{Intérêts pour la SCIENCE}
+Rôle des forêts tropicales en Nouvelle-Calédonie dans le cycle du carbone:
 
 \begin{itemize}
-\item Effets des facteurs environnementaux sur le stockage du carbone.
-\item Estimation précise des stocks de carbone forestier en Nouvelle-Calédonie.
-\item Estimation des émissions liées à la déforestation en Nouvelle-Calédonie.
+\item Estimation des stocks de carbone forestier en NC et de leur variation dans l'espace.
+\item Estimation des émissions liées à la déforestation en NC.
 \end{itemize}
+
+\vspace{0.25cm}
 
 \begin{center}
 \includegraphics[width=0.6\textwidth]{figs/carbon_cycle.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgfa80b66}]{Intérêts pour le TERRITOIRE}
+\begin{frame}[label={sec:org33bb818}]{Intérêts pour le TERRITOIRE}
 \begin{itemize}
-\item Suivi direct du changement de couvert forestier via un indice de carbone:
-\begin{itemize}
-\item Déforestation: perte totale de C.
-\item Dégradation: diminution des stocks de C, mortalité des arbres, perturbations.
-\item Séquestration: augmentation des stocks de C, croissance/recrutement des arbres + reforestation.
+\item Suivi direct du changement de couvert forestier via les stocks de carbone:\\
+Déforestation, Dégradation/Séquestration, Reforestation.
+\item Identification des hotspots de déforestation et des zones prioritaires pour la conservation.
+\item Suivi de la biodiversité et des services écosystémiques (disponibilité en eau) associés à la couverture forestière.
 \end{itemize}
-\item Identification des zones de hotspot de déforestation et des zones de conservation prioritaires.
-\item Suivi de la biodiversité et des services écosystémiques (disponibilité en eau, lutte contre l'érosion) associés à la forêt.
-\end{itemize}
+
+\vspace{0.25cm}
+
+\begin{center}
+\includegraphics[height=0.3\textheight]{figs/Cagou-WWF.jpg}
+\includegraphics[height=0.3\textheight]{figs/Chutes_de_la_madeleine.JPG}
+\end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf18a307}]{Intérêts ECONOMIQUES}
+\begin{frame}[label={sec:orgf6cc517}]{Intérêts ECONOMIQUES}
 \begin{itemize}
 \item Participation au mécanisme REDD+: Reducing Emissions from Deforestation and forest Degradation.
 \item Les tonnes de CO\textsubscript{2} non-émises (évitées) peuvent \alert{potentiellement} être créditées.
@@ -279,12 +282,14 @@ Rôle des forêts tropicales de NC dans le cycle du carbone:
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org0e1055a}]{Intérêts ECONOMIQUES}
+\begin{frame}[label={sec:org8f06009}]{Intérêts ECONOMIQUES}
 \begin{itemize}
 \item \alert{Pourrait} permettre d'attirer les investisseurs pour la conservation des forêts en Nouvelle-Calédonie.
-\item Compensation des émissions des activités humaines (mines et agriculture).
-\item Participation supplémentaire et affichage de la Nouvelle-Calédonie à la lutte contre les émissions de CO\textsubscript{2} et le changement climatique.
+\item Compensation des émissions liées aux activités économiques (mines et agriculture).
+\item Implication accrue de la Nouvelle-Calédonie dans la lutte contre les émissions de CO\textsubscript{2} et le changement climatique.
 \end{itemize}
+
+\vspace{0.25cm}
 
 \begin{center}
 \includegraphics[height=0.3\textheight]{figs/mines.jpg}
@@ -294,22 +299,35 @@ Rôle des forêts tropicales de NC dans le cycle du carbone:
 
 
 \section{Méthode}
-\label{sec:org3675ebd}
+\label{sec:orge8065df}
 
 \subsection{Données de terrain}
-\label{sec:orgbb12497}
+\label{sec:org896aece}
 
-\begin{frame}[label={sec:orgcfdaa1f}]{Données de terrain}
+\begin{frame}[label={sec:orgd10d81c}]{Données de terrain}
+\begin{itemize}
+\item Réseau de parcelles NC-PIPPN:\\
+New Caledonian Plant Inventory and Permanent Plots Network.
+\item > 500 parcelles dont 21 de 1ha, 70,000 arbres inventoriés.
+\item Estimations ponctuelles des stocks de carbone (en tC/ha).
+\item A compléter par d'autres parcelles, certaines permanentes.
+\end{itemize}
+
 \begin{center}
-\includegraphics[width=0.6\textwidth]{figs/ncpippn-plots.png}
+\includegraphics[width=0.7\textwidth]{figs/ncpippn-plots.png}
 \end{center}
 \end{frame}
 
 \subsection{Survol drone LiDAR}
-\label{sec:orgc9ef24d}
+\label{sec:org50f4a96}
 
-\begin{frame}[label={sec:org330fd7c}]{Survol drone LiDAR}
-Relation entre le carbone estimé sur le terrain et les métriques de hauteur de canopée dérivée du LiDAR
+\begin{frame}[label={sec:orgc6ff37a}]{Survol drone LiDAR}
+\begin{itemize}
+\item Survol des parcelles de terrain avec un drone équipé d'un LiDAR.
+\item Estimation d'une relation entre stock de carbone mesuré sur le terrain (C\textsubscript{i}) et hauteur de canopée issue du LiDAR (L\textsubscript{i}): \(C_i = \alpha L_i^{\beta}\).
+\item Obtention des stocks de carbone sous les bandes LiDAR.
+\item Multiplication du nombre d'observations terrain.
+\end{itemize}
 
 \begin{center}
 \includegraphics[width=0.3\textwidth]{figs/lidar-drone.jpg}
@@ -318,9 +336,15 @@ Relation entre le carbone estimé sur le terrain et les métriques de hauteur de
 \end{frame}
 
 \subsection{Cartographie via images Sentinel-2}
-\label{sec:org33f8373}
+\label{sec:orge5bae9a}
 
-\begin{frame}[label={sec:org11a03be}]{Cartographie via images Sentinel-2}
+\begin{frame}[label={sec:org66b2767}]{Cartographie via images Sentinel-2}
+\begin{itemize}
+\item Utilisation des images Sentinel-2 pour l'extrapolation des stocks à l'ensemble du territoire.
+\item Calibration d'un modèle \(C_i=f(S_i)\) où S\textsubscript{i} représente l'information spectrale issue des images Sentinel-2 pour le pixel \(i\).
+\item Mise à jour périodique des prédictions grace aux acquisitions régulières des images Sentinel-2.
+\end{itemize}
+
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.5\textwidth]{figs/newcal-S2.png}
@@ -328,23 +352,28 @@ Relation entre le carbone estimé sur le terrain et les métriques de hauteur de
 \end{figure}
 \end{frame}
 
-\subsection{Trois échelles}
-\label{sec:org1d7cba3}
+\begin{frame}[label={sec:orgf85887e}]{Emboîtement des données}
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.7\textwidth]{figs/data-sources.png}
+\caption{Emboîtement des différentes données.}
+\end{figure}
+\end{frame}
 
 \section{Montage de projet}
-\label{sec:orga7e03ee}
+\label{sec:orgc341204}
 
 \subsection{Institutions partenaires}
-\label{sec:orge9436d5}
+\label{sec:org6309663}
 
-\begin{frame}[label={sec:orge9df2b0}]{Institution partenaires}
+\begin{frame}[label={sec:org91e719f}]{Institution partenaires}
 \begin{itemize}
 \item UMR AMAP:
 \begin{itemize}
 \item coordinateurs: Ghislain Vieilledent et Thomas Ibanez.
 \item participants: équipe d'une dizaine de personnes, spécialités: \\
 botanique, LiDAR, télédétection, modélisation statistique, cartographie.
-\item localisation: Nouméa et Montpellier.
+\item localisation: Nouvelle-Calédonie et Montpellier.
 \end{itemize}
 \item Oeil:
 \begin{itemize}
@@ -359,14 +388,14 @@ botanique, LiDAR, télédétection, modélisation statistique, cartographie.
 \end{itemize}
 
 \begin{center}
-\includegraphics[width=0.4\textwidth]{figs/partners_logos.png}
+\includegraphics[width=0.5\textwidth]{figs/partners_logos.png}
 \end{center}
 \end{frame}
 
 \subsection{Calendrier}
-\label{sec:orgfb28043}
+\label{sec:org2b2b366}
 
-\begin{frame}[label={sec:org2acca48}]{Calendrier}
+\begin{frame}[label={sec:org0514f05}]{Calendrier}
 \begin{itemize}
 \item Projet de 3 ans.
 \item 4 workpackages: Inventaires, LiDAR, Cartographie, Coordination.
@@ -378,11 +407,11 @@ botanique, LiDAR, télédétection, modélisation statistique, cartographie.
 \end{frame}
 
 \subsection{Financement}
-\label{sec:org8193605}
+\label{sec:org6dcac91}
 
-\begin{frame}[label={sec:org9ddd122}]{Budget}
+\begin{frame}[label={sec:org69743f7}]{Budget}
 \begin{itemize}
-\item Budget total: \textasciitilde{}525,000 euros
+\item Budget total estimé: \textasciitilde{}525,000 euros
 \item Frais de personnel (15 personnes, 53 mois ETP): 375,000 euros.
 \item Frais de fonctionnement (matériels, missions): 150,000 euros.
 \end{itemize}
@@ -392,7 +421,7 @@ botanique, LiDAR, télédétection, modélisation statistique, cartographie.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgc99c5fe}]{Financement}
+\begin{frame}[label={sec:orgfa8c2e7}]{Financement}
 \begin{itemize}
 \item Financement propre: 200,000 euros (> 50\% des frais de personnel).
 \item Recherche de financement: 325,000 euros.
